Agrega resolucion ejercicio 4 del TP de bases de datos por vectores

--- a/TP4_Bases_de_Datos_Vectores/main.ipynb
+++ b/TP4_Bases_de_Datos_Vectores/main.ipynb
@@ -1161,13 +1161,111 @@
     "**Crea tres documentos:**\n",
     "- \"Python es ideal para ciencia de datos\"\n",
     "- \"JavaScript maneja interacciones web dinámicas\"\n",
-    "- \"Java se usa en aplicaciones empresariales\"\n",
-    "\n",
-    "**Realiza una consulta por la frase: \"Lenguajes backend y frontend\".**\n",
-    "\n",
+    "- \"Java se usa en aplicaciones empresariales\""
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 67,
+   "id": "2724ebb9",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: f2b02210-a5f0-4f59-bca1-280b12173d31\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"Python es ideal para ciencia de datos\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 68,
+   "id": "14d4a7ae",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: f76a6214-1a0d-4871-91f2-fe81e65aaf9b\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"JavaScript maneja interacciones web dinámicas\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
+   "id": "91f40d56",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: 18d57d67-cdf9-46a2-bc9d-998084bf28df\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"Java se usa en aplicaciones empresariales\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "31f1b594",
+   "metadata": {},
+   "source": [
+    "**Realiza una consulta por la frase: \"Lenguajes backend y frontend\".**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 70,
+   "id": "f3c72772",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 Mejor coincidencia: ecialmente útil para buscar información relevante en grandes colecciones de datos.\n",
+      "\n",
+      "La consulta de una base de datos vectorial implica buscar los embeddings más cercanos al embedding de la consulta. La distancia entre los embeddings indica la similitud semántica entre los datos.\n",
+      "\n",
+      "Las aplicaciones de las bases de datos vectoriales son diversas, incluyendo la búsqueda semántica, los sistemas de recomendación, la detección de anomalías y el procesamiento del lenguaje natural.\n",
+      "\n",
+      "El procesamiento del \n",
+      "📁 Fuente: doc1.txt\n",
+      "🆔 ID: 45aed722-c976-4f03-b264-5df7adce03cb\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_example(\"Lenguajes backend y frontend\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "3a34971b",
+   "metadata": {},
+   "source": [
     "**¿Cuáles documentos aparecen como coincidencias?**\n",
     "\n",
-    "**Analiza cómo las palabras clave influyen en los resultados.**"
+    "Los documentos que aparecen como coincidencias corresponden a los documentos con los que inicialmente se creo la base de datos. Es decir que ninguno de los documentos recientemente creados en este ejercicio son encontrados como coincidencias.\n",
+    "\n",
+    "**Analiza cómo las palabras clave influyen en los resultados.**\n",
+    "\n",
+    "Aparentemente, la palabra \"Lenguaje\" no resulta ser asociada a los nombres de lenguajes como \"Python\" o \"JavaScript\" por ejemplo. Se observa que los resultados guardan relacion más con la palabra \"backend\", esto porque lo detallado en cada uno de los documentos de la respuesta coincide con las descripciones de las funciones del backend.\n",
+    "\n",
+    "Resulta curioso que el modelo no vincule \"Lenguajes\" con \"Python\", \"Java\" o \"JavaScript\", quizás sean necesarias mas referencias que vinculen los lenguajes de programación con la palabra \"Lenguaje\"."
    ]
   },
   {
