Agrega resolucion ejercicios 6 y 7 TP Bases de datos por vectores

--- a/TP4_Bases_de_Datos_Vectores/main.ipynb
+++ b/TP4_Bases_de_Datos_Vectores/main.ipynb
@@ -1291,14 +1291,86 @@
    "source": [
     "### **Ejercicio 6: Actualización en Cadena** ###\n",
     "\n",
-    "**Crea un documento con el texto \"IA y ética son temas actuales\".**\n",
-    "\n",
+    "**Crea un documento con el texto \"IA y ética son temas actuales\".**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 71,
+   "id": "f3521ff7",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: 0be4fe6f-0bae-4300-8782-4a1485624d5f\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"IA y ética son temas actuales\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "2dccc50e",
+   "metadata": {},
+   "source": [
     "**Actualízalo dos veces:**\n",
     "\n",
-    "**Primera actualización: \"Ética en IA aborda dilemas morales\"**\n",
-    "\n",
-    "**Segunda actualización: \"El uso de IA debe estar regulado por principios éticos\".**\n",
-    "\n",
+    "**Primera actualización: \"Ética en IA aborda dilemas morales\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 72,
+   "id": "9c4a8cfb",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "♻️ Documento actualizado. Nuevo ID: 32ed8c7a-0a5c-421d-bacf-2ad969de9881\n"
+     ]
+    }
+   ],
+   "source": [
+    "update_example(\"0be4fe6f-0bae-4300-8782-4a1485624d5f\", \"Ética en IA aborda dilemas morales\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "5ca25684",
+   "metadata": {},
+   "source": [
+    "**Segunda actualización: \"El uso de IA debe estar regulado por principios éticos\".**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 73,
+   "id": "e2c0403d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "♻️ Documento actualizado. Nuevo ID: cf1020a5-05fd-4efe-9fcd-f67ebc537cb2\n"
+     ]
+    }
+   ],
+   "source": [
+    "update_example(\"32ed8c7a-0a5c-421d-bacf-2ad969de9881\", \"El uso de IA debe estar regulado por principios éticos\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d3f13757",
+   "metadata": {},
+   "source": [
     "**¿Cómo sigue evolucionando el contenido del documento con cada update?**"
    ]
   },
@@ -1311,12 +1383,90 @@
     "\n",
     "**Crea dos documentos similares pero no idénticos:**\n",
     "\n",
-    "**\"Blockchain garantiza transacciones seguras\"**\n",
-    "\n",
-    "**\"Criptomonedas usan tecnología blockchain\".**\n",
-    "\n",
-    "**Realiza una consulta por \"Seguridad en finanzas digitales\".**\n",
-    "\n",
+    "**\"Blockchain garantiza transacciones seguras\"**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 75,
+   "id": "8723611e",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: 35fc5901-df58-45aa-9510-427eba53867c\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"Blockchain garantiza transacciones seguras\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "a729dfe1",
+   "metadata": {},
+   "source": [
+    "**\"Criptomonedas usan tecnología blockchain\".**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 76,
+   "id": "91182c93",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: 4cca6fff-3c9a-455b-aa75-73fce29ea7cb\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"Criptomonedas usan tecnología blockchain\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8ea30449",
+   "metadata": {},
+   "source": [
+    "**Realiza una consulta por \"Seguridad en finanzas digitales\".**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 80,
+   "id": "198928de",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "📄 Mejor coincidencia: dexación y consulta para manejar grandes volúmenes de embeddings.\n",
+      "\n",
+      "La seguridad y la privacidad son consideraciones importantes al almacenar y consultar embeddings, especialmente cuando se trata de datos sensibles.\n",
+      "\n",
+      "El futuro de las bases de datos vectoriales es prometedor, con continuas investigaciones y desarrollos en áreas como la eficiencia, la escalabilidad y la interpretabilidad.\n",
+      "📁 Fuente: doc1.txt\n",
+      "🆔 ID: 297f015e-2469-4eb9-b1c9-c8a55b58d1c4\n"
+     ]
+    }
+   ],
+   "source": [
+    "read_example(\"Seguridad en finanzas digitales\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c91a213",
+   "metadata": {},
+   "source": [
     "**¿Ambos documentos aparecen? Explica la similitud semántica.**"
    ]
   },
