Agrega ejercicio 5 del TP de BAses de Datos por Vectores

--- a/TP4_Bases_de_Datos_Vectores/main.ipynb
+++ b/TP4_Bases_de_Datos_Vectores/main.ipynb
@@ -1275,13 +1275,189 @@
    "source": [
     "### **Ejercicio 5: Eliminaciones Selectivas** ###\n",
     "\n",
-    "**Crea dos documentos con tópicos opuestos (ejemplo: uno sobre \"Ecología\" y otro sobre \"Minería de datos\").**\n",
+    "**Crea dos documentos con tópicos opuestos (ejemplo: uno sobre \"Ecología\" y otro sobre \"Minería de datos\").**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 81,
+   "id": "e33bcfb5",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: d1fb88f8-348e-434b-b23e-59a7ecc0fc37\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo asociado con la Ecología\n",
+    "create_example(\"Las bases posteriores para la ecología moderna se establecieron en los primeros trabajos de los fisiólogos de plantas y animales.\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "2cbd502d",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: ef12fe1b-d4d3-4680-b717-260ca94fbfdc\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Ejemplo asociado con Minería de Datos\n",
+    "create_example(\"La tarea de minería de datos real es el análisis automático de grandes cantidades de datos para extraer patrones\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 83,
+   "id": "336f440b",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "81"
+      ]
+     },
+     "execution_count": 83,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contamos la cantidad de documentos:\n",
+    "collection.count()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ac71daf5",
+   "metadata": {},
+   "source": [
+    "**Elimina el documento sobre ecología () usando su ID.**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 86,
+   "id": "a5a27e30",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "🗑️ Documento con ID 'd1fb88f8-348e-434b-b23e-59a7ecc0fc37' eliminado.\n"
+     ]
+    }
+   ],
+   "source": [
+    "delete_example(\"d1fb88f8-348e-434b-b23e-59a7ecc0fc37\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "fc924637",
+   "metadata": {},
+   "source": [
+    "**Verifica que solo quede un documento.**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 87,
+   "id": "d343b620",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Documento no encontrado\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Utilizamos el ID del documento relacionado con Ecología\n",
+    "# ID: d1fb88f8-348e-434b-b23e-59a7ecc0fc37\n",
+    "sample = collection.get()\n",
     "\n",
-    "**Elimina el documento sobre ecología usando su ID.**\n",
+    "ecologia_doc = \"d1fb88f8-348e-434b-b23e-59a7ecc0fc37\"\n",
     "\n",
-    "**Verifica que solo quede un documento.**\n",
+    "for i, doc in enumerate(sample['ids']):\n",
+    "    if doc == ecologia_doc:\n",
+    "        print(f\"Documento encontrado: {sample['documents'][i]}\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Documento no encontrado\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 88,
+   "id": "59401904",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Documento encontrado: La tarea de minería de datos real es el análisis automático de grandes cantidades de datos para extraer patrones\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Luego para realizar la comparación verificamos el ID del documento acerca de minería de datos\n",
+    "# ID: ef12fe1b-d4d3-4680-b717-260ca94fbfdc\n",
+    "sample = collection.get()\n",
     "\n",
-    "**¿Cómo usar collection.count() para confirmar? 2**\n"
+    "min_data_doc = \"ef12fe1b-d4d3-4680-b717-260ca94fbfdc\"\n",
+    "\n",
+    "for i, doc in enumerate(sample['ids']):\n",
+    "    if doc == min_data_doc:\n",
+    "        print(f\"Documento encontrado: {sample['documents'][i]}\")\n",
+    "        break\n",
+    "else:\n",
+    "    print(\"Documento no encontrado\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "6d2557cd",
+   "metadata": {},
+   "source": [
+    "**¿Cómo usar collection.count() para confirmar?**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 89,
+   "id": "1be899ee",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "80"
+      ]
+     },
+     "execution_count": 89,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "# Contamos nuevamente la cantidad de documentos:\n",
+    "collection.count()"
    ]
   },
   {
