Agrega ejercicios 8 y 9 del TP de Bases de Datos por Vectores

--- a/TP4_Bases_de_Datos_Vectores/main.ipynb
+++ b/TP4_Bases_de_Datos_Vectores/main.ipynb
@@ -1653,11 +1653,88 @@
    "source": [
     "### **Ejercicio 8: Reiniciar Base de Datos** ###\n",
     "\n",
-    "**Elimina todos los documentos usando delete() con el parámetro correcto.**\n",
+    "**Elimina todos los documentos usando delete() con el parámetro correcto.**\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 92,
+   "id": "27e3cab2",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Bases de datos elminada!\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Para poder eliminar todos los documentos es necesario tener los ID de todos estos primero\n",
+    "docs_to_delete = collection.peek()\n",
     "\n",
-    "**Vuelve a cargar la base desde cero con crear_base_datos().**\n",
+    "# Get all their IDs\n",
+    "ids_to_delete = docs_to_delete['ids']\n",
     "\n",
-    "**¿Cuántos documentos hay ahora? (Usa collection.count()).**\n"
+    "# Now delete using the list of IDs\n",
+    "collection.delete(ids=ids_to_delete)\n",
+    "print(\"Bases de datos elminada!\")"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "48942229",
+   "metadata": {},
+   "source": [
+    "**Vuelve a cargar la base desde cero con crear_base_datos().**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 93,
+   "id": "b9c67a79",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Base de datos creada con éxito.\n"
+     ]
+    }
+   ],
+   "source": [
+    "crear_base_datos()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8c9aee12",
+   "metadata": {},
+   "source": [
+    "**¿Cuántos documentos hay ahora? (Usa collection.count()).**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 94,
+   "id": "54c3335f",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "93"
+      ]
+     },
+     "execution_count": 94,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "collection.count()"
    ]
   },
   {
@@ -1667,18 +1744,98 @@
    "source": [
     "### **Ejercicio 9: Errores de Inserción** ###\n",
     "\n",
-    "**Intenta crear un documento sin texto (ejemplo: cadena vacía).**\n",
-    "\n",
-    "**Corrige el error usando la función get_embeddings().**\n",
-    "\n",
-    "**¿Qué lección aprendemos sobre los requisitos de ChromaDB?**"
+    "**Intenta crear un documento sin texto (ejemplo: cadena vacía).**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 95,
+   "id": "b9b14ee1",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "✅ Documento añadido con ID: 7bd60d0b-1670-4262-9eab-d3114d32eab0\n"
+     ]
+    }
+   ],
+   "source": [
+    "create_example(\"\")"
    ]
   },
   {
    "cell_type": "markdown",
-   "id": "441300a4",
+   "id": "5e43cb4a",
    "metadata": {},
-   "source": []
+   "source": [
+    "**Corrige el error usando la función get_embeddings().**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 100,
+   "id": "4a03a50a",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Con el ID del document podemos realizar la corrección:\n",
+    "\n",
+    "id_doc_vacio = \"7bd60d0b-1670-4262-9eab-d3114d32eab0\"\n",
+    "\n",
+    "texto_corregido = \"El enfoque de las computadoras cuánticas es resolver problemas de una manera fundamentalmente nueva.\"\n",
+    "\n",
+    "# Generamos el embedding correcto\n",
+    "fix_embedding = get_embeddings([texto_corregido])\n",
+    "\n",
+    "# Actualizamos el documento\n",
+    "collection.update(\n",
+    "            ids=[id_doc_vacio],  \n",
+    "            documents=[texto_corregido],  \n",
+    "            embeddings=fix_embedding \n",
+    "        )"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 105,
+   "id": "1bd661f3",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Fixed document content: El enfoque de las computadoras cuánticas es resolver problemas de una manera fundamentalmente nueva.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Realizamos la verificación\n",
+    "result = collection.get(ids=[id_doc_vacio])\n",
+    "\n",
+    "fixed_document = result['documents'][0]\n",
+    "print(\"Fixed document content:\", fixed_document)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "61600632",
+   "metadata": {},
+   "source": [
+    "**¿Qué lección aprendemos sobre los requisitos de ChromaDB?**\n",
+    "\n",
+    "Podemos concluir que ChromaDB no maneja embeddings de forma automática, es el usuario el responsable de realizar la carga y configuración de los embeddings y también de agregar manualmente el texto correspondiente al vector.\n",
+    "\n",
+    "ChromaDB es simplemente una base de datos de vectores, es responsable de almacenar e indexar los embeddings, puede extraer vectores basados en busquedas por similitud (e.g. similaridad coseno). Sin embargo ChromaDB no se ocupa de manejar los embeddings a partir del texto. \n",
+    "\n",
+    "Por tanto existe la siguiente division de responsabilidades:\n",
+    "\n",
+    "- Generacion de embeddings: Responsabilidad del usuario baso en el modelo de su elección\n",
+    "\n",
+    "- Almacenaje y búsqueda por similitud: Responsabilidad de ChromaDB.\n"
+   ]
   }
  ],
  "metadata": {
